# picknickdouille

./: docker-compose.override.yml  main.py  server.py  todo.md
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml  server.py
backend/test/: test_randomizer.py
infrastructure/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
infrastructure/.terraform/modules/: modules.json
infrastructure/app/: picnicdouille.tf
