[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"

[tool.poetry]
authors = ["theTribe"]
name = "picknickdouille"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.11.4"
flask = "^2.3.2"
pip = "^23.1.2"


[tool.poetry.dev-dependencies]
pytest = "7.4.0"
isort = "~5.12.0"
coverage = { version = "7.2.7", extras = ["toml"]}
black = "^23.3.0"


[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py311']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''